[gd_scene load_steps=19 format=2]

[ext_resource path="res://Art/UI/title.png" type="Texture" id=1]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Art/frogdad/spritesheet.png" type="Texture" id=3]
[ext_resource path="res://Art/old art/baby gertrude.png" type="Texture" id=4]
[ext_resource path="res://Art/old art/gravy baby.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/fly doodle.png" type="Texture" id=6]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://Art/old art/baby gilbert.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "wiggle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -2.0, 2.0 ]
}

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=7]

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Button/colors/font_color = Color( 0.905882, 0.823529, 0.572549, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 0.501961, 0.454902, 0.313726, 1 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )
VBoxContainer/constants/separation = 10

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 508, 0, 508, 1269 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.862745, 0.847059, 0.690196, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -149.0

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="TextureRect" parent="UI"]
margin_left = 225.0
margin_right = 798.0
margin_bottom = 400.0
rect_rotation = -5.0
rect_pivot_offset = Vector2( 215, 150 )
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Title"]
autoplay = "wiggle"
anims/RESET = SubResource( 1 )
anims/wiggle = SubResource( 2 )

[node name="MainMenu" type="VBoxContainer" parent="UI"]
margin_left = 464.0
margin_top = 404.0
margin_right = 560.0
margin_bottom = 488.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = SubResource( 8 )

[node name="StartButton" type="Button" parent="UI/MainMenu"]
margin_right = 96.0
margin_bottom = 37.0
size_flags_vertical = 2
theme = ExtResource( 2 )
text = "Start"

[node name="QuitButton" type="Button" parent="UI/MainMenu"]
margin_top = 47.0
margin_right = 96.0
margin_bottom = 84.0
theme = ExtResource( 2 )
text = "Quit"

[node name="FrogDad" type="AnimatedSprite" parent="."]
position = Vector2( 770, 76 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 10 )
centered = false

[node name="Gertrude" type="Sprite" parent="."]
position = Vector2( 224, 357 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
centered = false

[node name="Gravy" type="Sprite" parent="."]
position = Vector2( 141, 441 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="Gilbert" type="Sprite" parent="."]
position = Vector2( 690, 442 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="Fly" type="Sprite" parent="."]
position = Vector2( 220, 50 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 6 )
centered = false

[node name="SkipIntroButton" type="Button" parent="."]
margin_top = 89.0
margin_right = 214.0
margin_bottom = 195.0
text = "Skip Intro"

[node name="SkipIntroGoToJJ" type="Button" parent="."]
margin_top = 216.0
margin_right = 214.0
margin_bottom = 322.0
text = "Skip Intro Go to Jimothy John's"

[node name="SkipToToddler" type="Button" parent="."]
margin_left = 1.0
margin_top = 357.0
margin_right = 215.0
margin_bottom = 463.0
text = "Skip To Toddler"

[connection signal="mouse_entered" from="UI/MainMenu/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="mouse_exited" from="UI/MainMenu/StartButton" to="." method="_on_StartButton_mouse_exited"]
[connection signal="pressed" from="UI/MainMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="UI/MainMenu/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="UI/MainMenu/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="UI/MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SkipIntroButton" to="." method="_on_SkipIntroButton_pressed"]
[connection signal="pressed" from="SkipIntroGoToJJ" to="." method="_on_SkipIntroGoToJJ_pressed"]
[connection signal="pressed" from="SkipToToddler" to="." method="_on_SkipToToddler_pressed"]
